[package]
name = "tinc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.71"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["net", "signal", "macros", "rt-multi-thread"] }
log = "0.4.17"
